--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <section class="main_section">
+      <div class="container">
+        <p>Enter your text or URL</p>
+        <input type="text" placeholder="Text ot URL" id="input_txt" />
+
+        <div id="img_box">
+          <img src="" alt="" id="qr_img" />
+        </div>
+        <button onclick="generateQr()">Generate QR</button>
+      </div>
+    </section>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
