--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         </div>
         <button onclick="generateQr()">Generate QR</button>
       </div>
+
+      <div class="copyright">
+        <p>Copyright © 2024 pushon21. All rights reserved.</p>
+      </div>
     </section>
     <script src="assets/js/script.js"></script>
   </body>
